# HabitTrackerAPI

./: .dockerignore  .env_sample  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  test.sh
config/: pagination.py  permissions.py  settings.py  urls.py  validators.py
habits/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
habits/management/commands/: tg_bot.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
